# evol

./: .atom-build.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Session.vim  baseshaders.sh  meson.build  meson_options.txt  tags
Application/: App.c  App.h
Application/Asset/: Asset.h  AssetLoader.c  AssetLoader.h  AssetStore.c  AssetStore.h  AssetTypes.h  material.c  material.h
Application/AssetLoader/: AssetLoader.c  AssetLoader.h
Application/EventDebug/: EventDebug.c  EventDebug.h
Application/Game/: Game.c  Game.h
Application/Input/: Input.c  Input.h
Application/Physics/: CMakeLists.txt  Physics.h  meson.build  physics_types.h
Application/Physics/src/: .Physics.cpp.swp  BulletState.cpp  BulletState.h  EvMotionState.cpp  EvMotionState.h  Physics.cpp  PhysicsState.h  physics_utils.h
Application/Renderer/: Renderer.c  Renderer.h  RendererBackend.h  baseshaderpaths.txt  renderer_types.h
Application/Renderer/BaseShaders/: dummy.frag.glsl  dummy.vert.glsl  triangle.frag.glsl  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
Application/Renderer/backends/: VulkanRendererBackend.c
Application/Scratchpad/: Scratchpad.c  Scratchpad.h
Application/Vulkan/: 3  SemaphoreManager.c  SemaphoreManager.h  Vulkan.c  Vulkan.h  VulkanQueueManager.c  VulkanQueueManager.h  meson.build  vulkan_utils.h
Application/Vulkan/include/: Vulkan.h
Application/Window/: Window.c  Window.h  meson.build
Application/Window/subprojects/: glfw.wrap
Application/World/: World.c  World.h  WorldModules.h  flecs_threads.c  flecs_threads.h
Application/World/modules/: .rendering_module.c.swp  camera_module.c  camera_module.h  geometry_module.c  geometry_module.h  node_module.c  node_module.h  physics_module.c  physics_module.h  rendering_module.c  rendering_module.h  script_module.c  script_module.h  transform_module.c  transform_module.h
buildscripts/: bin2c.lua  bin2cstring.lua  copy.py  findWithExt.ps1  findWithExt.sh
demo/: config.lua  meson.build
demo/src/: main.c
export/module/: meson.build
include/: engine_config.h  globals.h  meson.build  types.h  utils.h
include/ev_log/: ev_log.h
include/events/: ControlEvent.c  ControlEvent.h  EngineEvent.c  EngineEvent.h  KeyEvent.c  KeyEvent.h  MouseEvent.c  MouseEvent.h  WindowEvent.c  WindowEvent.h  events.h
include/evol/: evol.h  evolmod.h
include/evol/common/: ev_globals.h  ev_log.h  ev_macros.h  ev_profile.h  ev_types.h
include/evol/common/types/: dvec.h  vec.h
include/evol/core/: configloader.h  event.h  eventlistener.h  eventsystem.h  evol.h  evstore.h  lualoader.h  module.h  modulemanager.h  namespace.h
include/evol/meta/: cliargs.txt  configvars.h  defaults.h  event_include.h  module_import.h  namespace_import.h  resdef.h  strings.h  type_import.h
include/evol/meta/results/: configloaderresults.h  engineresults.h  evolresults.h  lualoaderresults.h  luautilsresults.h  modulemanagerresults.h  storeresults.h
include/evol/misc/: checksum.h
include/evol/threads/: evolpthreads.h  evolthreadpool.h
include/evol/utils/: aligned_alloc.h  filesystem.h  lua_evutils.h  sleep.h
models/: Car.gltf  map.gltf  map3.gltf  terrain.gltf
modules/: meson.build
modules/evolwindow/: meson.build  module.lua
pch/: evpch.h
scripts/: baseshaders.ps1  dllcopy.ps1  dllcopy.sh  meson.build
src/: main.c  meson.build  utils.c
src/common/: dvec.c  log.c  vec.c
src/core/: configloader.c  event.c  eventsystem.c  evol.c  evstore.c  lualoader.c  module.c  modulemanager.c  namespace.c
src/lua/: meson.build  modulesystem.lua
src/misc/: checksum.c
src/threads/: evolpthreads.c  evolthreadpool.c
src/utils/: aligned_alloc.c  filesystem.c  lua_evutils.c  sleep.c
subprojects/: bullet3.wrap  cargs.wrap  cglm.wrap  cgltf.wrap  cute_headers.wrap  evjson.wrap  evol-eventsystem.wrap  evol_threads.wrap  evstr.wrap  flecs-components-http.wrap  flecs-dash.wrap  flecs-json.wrap  flecs-meta.wrap  flecs-player.wrap  flecs-rest.wrap  flecs-systems-civetweb.wrap  flecs.wrap  glfw.wrap  luaautoc.wrap  luadbg.wrap  luajit.wrap  physics_debug.wrap  remotery.wrap  stb.wrap  vec.wrap  vma.wrap
subprojects/packagefiles/cgltf/: meson.build
subprojects/packagefiles/cute_headers/: cute_files.c  cute_filewatch.c  meson.build
subprojects/packagefiles/evstr/: evstr.c  meson.build
subprojects/packagefiles/flecs-components-http/: meson.build
subprojects/packagefiles/flecs-dash/: meson.build
subprojects/packagefiles/flecs-json/: meson.build
subprojects/packagefiles/flecs-player/: meson.build
subprojects/packagefiles/flecs-rest/: meson.build
subprojects/packagefiles/flecs-systems-civetweb/: meson.build
subprojects/packagefiles/luadbg/: meson.build
subprojects/packagefiles/luajit/: luajitbuild.bat  meson.build
subprojects/packagefiles/remotery/: meson.build
subprojects/packagefiles/stb/: meson.build
subprojects/packagefiles/vec/: meson.build  vec.c
subprojects/packagefiles/vma/: meson.build
