install_headers(
  'evol/evol.h',
  subdir: 'evol',
)

# Utils headers
install_headers(
  'evol/utils/filesystem.h',
  subdir: 'evol/utils',
)

# Core headers
install_headers(
  'evol/core/lualoader.h',
  'evol/core/modulemanager.h',
  'evol/core/evol.h',
  subdir: 'evol/core',
)

# Common headers
install_headers(
  'evol/common/ev_macros.h',
  'evol/common/ev_types.h',
  'evol/common/ev_log.h',
  'evol/common/ev_globals.h',
  subdir: 'evol/common',
)

# Types headers
install_headers(
  'evol/common/types/vec.h',
  subdir: 'evol/common/types',
)

# Meta headers
install_headers(
  'evol/meta/configvars.h',
  'evol/meta/resdef.h',
  subdir: 'evol/meta',
)
# Res headers
install_headers(
  'evol/meta/results/evolresults.h',
  'evol/meta/results/engineresults.h',
  'evol/meta/results/lualoaderresults.h',
  'evol/meta/results/modulemanagerresults.h',
  subdir: 'evol/meta/results',
)

# Misc headers
install_headers(
  'evol/misc/checksum.h',
  subdir: 'evol/misc',
)

# Extern headers
install_headers(
  'evol/extern/sds.h',
  'evol/extern/sdsalloc.h',
  subdir: 'evol/extern',
)
