evol_src += [
  # Core
  'src/core/evol.c',
  'src/core/lualoader.c',
  'src/core/modulemanager.c',
  'src/core/module.c',
  'src/core/evstore.c',
]

evol_src += [
  # Common
  'src/common/log.c',
  'src/common/vec.c',
]

evol_src += [
  # Utils
  'src/utils/filesystem.c',
]

evol_src += [
  # Misc
  'src/misc/checksum.c',
]

evol_src += [
  # Extern
  'src/extern/sds.c',
]

subdir('lua')
