evol_src += [
  # Core
  'src/core/evol.c',
  'src/core/modulemanager.c',
  'src/core/module.c',
  'src/core/configloader.c',
  'src/core/evstore.c',
  'src/core/eventsystem.c',
  'src/core/event.c',
  'src/core/namespace.c',
]

evol_src += [
  # Common
  'src/common/log.c',
  'src/common/vec.c',
  'src/common/dvec.c',
]

evol_src += [
  # Utils
  'src/utils/filesystem.c',
  'src/utils/lua_evutils.c',
  'src/utils/sleep.c',
]

evol_src += [
  # Misc
  'src/misc/checksum.c',
]

evol_src += [
  # Extern
  'src/extern/sds.c',
]

evol_src += [
  # Threads
  'src/threads/evolpthreads.c',
  'src/threads/evolthreadpool.c',
]

subdir('lua')
